k8s/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: fortinet-service
  namespace: fortinet
  labels:
    app: fortinet
spec:
  type: NodePort
  ports:
  - name: http
    port: 7777
    targetPort: 7777
    nodePort: 30778
  selector:
    app: fortinet
